[package]
name = "pdf-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
log = "0.4"
env_logger = "0.9"
actix-multipart = "0.4"
clap = {version = "4", features = ["derive"]}
uuid = "1.0"  # Optional: Used for generating unique filenames
reqsign = { version = "0.18", features = ["oracle", "default-context"] }
http = "1.3.1"