[package]
name = "pdf-server"
version = "0.2.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-web-httpauth = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
log = "0.4"
env_logger = "0.9"
actix-multipart = "0.4"
clap = {version = "4", features = ["derive", "env"]}
reqsign = { version = "0.18", features = ["oracle", "default-context"] }
http = "1.3.1"
bytes = "1.5"  
openssl = { version = "0.10.74", features = ["vendored"] }